--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "mock": "npx json-server mock/db.json"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gluestack-style/react": "^1.0.52",
+    "@gluestack-ui/themed": "^1.1.12",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
@@ -23,12 +26,16 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "json-server": "^1.0.0-alpha.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.19.6",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
