--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-mmkv": "^2.12.2",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "13.4.0",
