--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
+    "expo-haptics": "~12.8.1",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
     "expo-router": "~3.4.6",
