--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-haptics": "~12.8.1",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
+    "expo-mail-composer": "~12.7.1",
     "expo-router": "~3.4.6",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -33,6 +34,7 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-maps": "^1.11.3",
     "react-native-mmkv": "^2.12.2",
+    "react-native-permissions": "^4.1.4",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
