--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL=https://byijfj21s0.execute-api.us-west-2.amazonaws.com/v1
+EXPO_PUBLIC_API_URL=https://byijfj21s0.execute-api.us-west-2.amazonaws.com/v1/
