--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
     "json-server": "0.17.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "^2.15.0",
-    "react-native-maps": "^1.11.3",
-    "react-native-mmkv": "^2.12.2",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
     "react-native-permissions": "^4.1.4",
-    "react-native-reanimated": "^3.8.1",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.1",
     "react-test-renderer": "18.2.0",
